<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_badge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newBadgeName"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newBadgePlace"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:background="#DEDEDE">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newBadgeImage"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newBadgeTime"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/badgeTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newBadgeInfo"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/returnFromBadgeButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="30dp"
        android:text="@string/returnButton"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addNewBadgeButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:text="@string/addNewBadgeButton"
        android:textSize="20sp" />


</FrameLayout>